--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/runtime": "^7.14.8",
     "@brainhubeu/react-carousel": "^2.0.4",
     "@craco/craco": "^6.2.0",
+    "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
