news and about qoldi

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^1.1.1",
     "connected-react-router": "^6.9.1",
     "craco-less": "^2.0.0",
+    "draft-convert": "^2.1.13",
     "firebase": "^8.8.0",
     "history": "^5.0.0",
     "moment": "^2.29.1",
@@ -36,6 +37,7 @@
     "react-code-input": "^3.10.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^11.3.4",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
